# transformer_from_scratch

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  verify_installation.py
examples/: README.md  attention_visualization.py  text_generation.py
llm-fine-tune/: 01_introduction_to_fine_tuning.ipynb  02_lora_implementation.ipynb  03_data_preparation.ipynb  04_instruction_tuning.ipynb  05_evaluation_metrics.ipynb  06_qlora_quantization.ipynb  README.md
notebooks/: 05_encoder_decoder.ipynb  TUTORIALS_OVERVIEW.md
notebooks/archive/: 01_embeddings_and_positional_encoding.ipynb  02_scaled_dot_product_attention.ipynb  04_feed_forward_networks.ipynb
src/: __init__.py  transformer.py
src/modules/: __init__.py  attention.py  decoder.py  embeddings.py  encoder.py  feed_forward.py  multi_head_attention.py  positional_encoding.py
tests/: __init__.py  conftest.py  test_attention.py  test_embeddings.py  test_transformer.py
transformer-foundation/: 01_embeddings_and_positional_encoding.ipynb  02_scaled_dot_product_attention.ipynb  03_multi_head_attention.ipynb  04_feed_forward_networks.ipynb  05_encoder_decoder.ipynb  06_complete_transformer.ipynb  07_emergent_reasoning.ipynb  TUTORIALS_OVERVIEW.md
